[package]
name = "onedrive-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
indicatif = "0.17.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["full"] }

